websiteExamples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /resume
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80

    - host: localhost
      http:
        paths:
          - path: /portfolio
            pathType: Prefix
            backend:
              service:
                name: portfolio-service-1
                port:
                  number: 80
